# vlyc2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vlyc.qrc
cmake/: FindLibMagic.cmake
include/: foreignplugin.h  plugin.h  toolplugin.h  vlyc2pointer.h
plugins/: CMakeLists.txt  build.cmake  prepare.cmake
plugins/browser/: BrowserPlugin.cpp  BrowserPlugin.h  CMakeLists.txt  LinkContextMenu.cpp  LinkContextMenu.h  bookmark.cpp  bookmark.h  bookmarkdialog.cpp  bookmarkdialog.h  bookmarkdialog.ui  browser.cpp  browser.h  browserwindow.cpp  browserwindow.h  common.h  navigationbar.cpp  navigationbar.h  plugin.json  tabbar.cpp  tabbar.h  tabwidget.cpp  tabwidget.h  webpage.cpp  webpage.h  webview.cpp  webview.h
plugins/direct/: CMakeLists.txt  plugin.json  stubplugin.cpp  stubplugin.h
plugins/include/: foreignplugin.h  plugin.h  siteplugin.h  video.h  videoimpl.h
plugins/python/: CMakeLists.txt  LegacyPluginLoader.cpp  LegacyPluginLoader.h  PluginLoader.cpp  PluginLoader.h  VlycPython.cpp  VlycPython.h  python.json  pythonplugin.cpp  pythonplugin.h  pythonplugin.qrc  pythonqtdecorator.cpp  pythonqtdecorator.h  pythonsites.cpp  pythonsites.h  pythonutil.h
plugins/python/console/: PythonQtScriptingConsole.cpp
plugins/python/lib/: etree.py  html.py  html.py~  isodate.py  network.py  plugin.py  tree.py  util.py  util.py~  xml.py
plugins/python/lib/plugin/: __init__.py  legacy.py  plugin.py  urlhandler.py
plugins/python/plugins/: crunchyroll.py  kbs.py  sbs.py  youtube.py  youtube_dl.py
plugins/python/wrap/: WrapLegacySitePlugin.cpp  WrapLegacySitePlugin.h  WrapPlugin.cpp  WrapPlugin.h
plugins/shared/: CMakeLists.txt  video.cpp  vlyc2pointer.cpp
plugins/simpleplaylist/: CMakeLists.txt  SimplePlaylistPlugin.cpp  SimplePlaylistPlugin.h  plugin.json
plugins/sleep/: CMakeLists.txt  SleepPlugin.cpp  SleepPlugin.h  plugin.json
plugins/stub/: CMakeLists.txt  stubplugin.cpp  stubplugin.h
plugins/test2/: CMakeLists.txt  plugin.json  testplugin2.cpp  testplugin2.h
shared/: CMakeLists.txt  Vlyc.cpp  Vlyc.h  VlycConfig.h  VlycLegacySitePlugin.h  VlycLoaderPlugin.cpp  VlycLoaderPlugin.h  VlycPlugin.cpp  VlycPlugin.h  VlycPluginInterface.cpp  VlycPluginInterface.h  VlycPluginManager.cpp  VlycPluginManager.h  VlycPluginManagerPrivate.cpp  VlycPluginManagerPrivate.h  VlycQtPluginLoader.cpp  VlycQtPluginLoader.h  VlycToolPlugin.h  VlycUrlHandlerPlugin.h  VlycVideoPlugin.cpp  VlycVideoPlugin.h  plugin.cpp
shared/VlycAsync/: PromiseEvent.cpp  PromiseEvent.h
shared/VlycMem/: Object.cpp  Object.h  Pointer.cpp  Pointer.h
shared/VlycResult/: Media.h  Menu.h  Object.cpp  Object.h  ObjectList.h  Playlist.cpp  Playlist.h  Promise.cpp  Promise.h  Promise_p.cpp  Promise_p.h  Result.cpp  Result.h  Url.cpp  Url.h
shared/VlycUtil/: VariantArgs.h  VariantArgsWrapper.h
shared/legacy/: VlycLegacySitePlugin.cpp  VlycLegacySitePlugin.h  siteplugin.h  video.cpp  video.h  videoimpl.h
src/: CMakeLists.txt  about.cpp  about.h  about.ui  application.cpp  application.h  browser.cpp  browser.h  browser.ui  cmdparser.cpp  cmdparser.h  fullscreencontroller.cpp  fullscreencontroller.h  fullscreencontroller.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pluginmanager.cpp  pluginmanager.h  sitemanager.cpp  sitemanager.h  videowidget.cpp  vlyc.cpp  vlyc.h  vlyc_xcb.cpp  vlyc_xcb.h  vlycbrowser.cpp  vlycbrowser.h
src/browser/: CMakeLists.txt  browser.cpp  browser.h  browserwindow.cpp  browserwindow.h  navigationbar.cpp  navigationbar.h  networkaccessmanager.cpp  networkaccessmanager.h  tabbar.cpp  tabbar.h  tabwidget.cpp  tabwidget.h  webpage.cpp  webpage.h  webview.cpp  webview.h
src/gui/: about.cpp  about.ui  fullscreencontroller.cpp  fullscreencontroller.h  fullscreencontroller.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  videowidget.cpp  videowidget.h
src/logic/: PlaylistModel.cpp  PlaylistModel.h  PlaylistNode.cpp  PlaylistNode.h  PromiseListener.cpp  PromiseListener.h  ResultModel.cpp  ResultModel.h  ResultModelNode.cpp  ResultModelNode.h  TempEventLoop.cpp  TempEventLoop.h  VlycPlayer.cpp  VlycPlayer.h  __lv_hacks.cpp  __lv_hacks.h
src/network/: networkaccessmanager.cpp  networkaccessmanager.h  simplefilecookiejar.cpp  simplefilecookiejar.h
src/util/: History.cpp  History.h  cmdparser.cpp  cmdparser.h  cmdparser_p.h
